force-app/main/default/objects/Settlement__c/fields/Closing_Orign__c.field-meta.xml
<CustomField>
    <fullName>Closing_Orign__c</fullName>
    <label>Closing Orign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Policy</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>