force-app/main/default/objects/Settlement__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>(X)Expiration Date</label>
    <type>Date</type>
</CustomField>