force-app/main/default/objects/Settlement__c/fields/GrossPremium__c.field-meta.xml
<CustomField>
    <fullName>GrossPremium__c</fullName>
    <label>(X)Gross Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>