force-app/main/default/objects/Settlement__c/fields/HeaderStatus__c.field-meta.xml
<CustomField>
    <fullName>HeaderStatus__c</fullName>
    <label>(X)Header Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>in progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>