force-app/main/default/objects/Settlement__c/fields/InceptionDate__c.field-meta.xml
<CustomField>
    <fullName>InceptionDate__c</fullName>
    <label>(X)Inception Date</label>
    <type>Date</type>
</CustomField>