force-app/main/default/objects/Settlement__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlements (Insurer)</relationshipLabel>
    <relationshipName>Settlements_Insurer</relationshipName>
    <type>Lookup</type>
</CustomField>