force-app/main/default/objects/Settlement__c/fields/LineItemName__c.field-meta.xml
<CustomField>
    <fullName>LineItemName__c</fullName>
    <description>생성 규칙
1) InsurancePolicy__r. Name &amp; &quot;_&quot; &amp; Settlement__r. ClosingOrign__c
2) Placement__r. Name &amp; &quot;_&quot; &amp; Settlement__r. ClosingOrign__c
3) Claim__r.Name &amp;&quot;_&quot; &amp; Settlement__r. ClosingOrign__c</description>
    <label>(X) Line Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>