force-app/main/default/objects/Settlement__c/fields/LKReBrokerage__c.field-meta.xml
<CustomField>
    <fullName>LKReBrokerage__c</fullName>
    <label>(X)LK Re Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>