force-app/main/default/objects/Settlement__c/fields/NameInsuredId__c.field-meta.xml
<CustomField>
    <fullName>NameInsuredId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(X)Insured(Ret)/Original Insured(Reins)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlements (Insured(Ret.)/Original Insured(Reins.))</relationshipLabel>
    <relationshipName>Settlements_NameInsuredId</relationshipName>
    <type>Lookup</type>
</CustomField>