force-app/main/default/objects/Settlement__c/fields/NettoLKPremium__c.field-meta.xml
<CustomField>
    <fullName>NettoLKPremium__c</fullName>
    <label>(X)Net to LK Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>