force-app/main/default/objects/Settlement__c/fields/PlacingTPPAdminFee__c.field-meta.xml
<CustomField>
    <fullName>PlacingTPPAdminFee__c</fullName>
    <label>(X)Placing TPP Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>