force-app/main/default/objects/Settlement__c/fields/PlacingTPPBrokerage__c.field-meta.xml
<CustomField>
    <fullName>PlacingTPPBrokerage__c</fullName>
    <label>(X)Placing TPP Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>