force-app/main/default/objects/Settlement__c/fields/PostingDate__c.field-meta.xml
<CustomField>
    <fullName>PostingDate__c</fullName>
    <label>(X)Posting Date</label>
    <type>Date</type>
</CustomField>