force-app/main/default/objects/Settlement__c/fields/ProducingTPPBrokerage__c.field-meta.xml
<CustomField>
    <fullName>ProducingTPPBrokerage__c</fullName>
    <label>(X)Producing TPP Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>