force-app/main/default/objects/Settlement__c/fields/RefClaim__c.field-meta.xml
<CustomField>
    <fullName>RefClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>