force-app/main/default/objects/Settlement__c/fields/RefInsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>RefInsurancePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. InsurancePolicy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>