force-app/main/default/objects/Settlement__c/fields/RefInsurancePolicyLineItem__c.field-meta.xml
<CustomField>
    <fullName>RefInsurancePolicyLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Insurance Policy Line Item</label>
    <referenceTo>InsurancePolicyLineItem__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements_RefInsurancePolicyLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>