force-app/main/default/objects/Settlement__c/fields/RefPlacementLineItem__c.field-meta.xml
<CustomField>
    <fullName>RefPlacementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Placement Line Item</label>
    <referenceTo>PlacementLineItem__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements_RefPlacementLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>