force-app/main/default/objects/Settlement__c/fields/RefReinsurance__c.field-meta.xml
<CustomField>
    <fullName>RefReinsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Reinsurance</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>