force-app/main/default/objects/Settlement__c/fields/RIpremium__c.field-meta.xml
<CustomField>
    <fullName>RIpremium__c</fullName>
    <label>(X)RI premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>