force-app/main/default/objects/Settlement__c/fields/SettlementPeriodLabel__c.field-meta.xml
<CustomField>
    <fullName>SettlementPeriodLabel__c</fullName>
    <description>정산 라벨</description>
    <label>(X)Settlement Period Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>