force-app/main/default/objects/Settlement__c/fields/TotalLBrokerageBeforeSharing__c.field-meta.xml
<CustomField>
    <fullName>TotalLBrokerageBeforeSharing__c</fullName>
    <label>(X)Total LBrokerage(Before Sharing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>