force-app/main/default/objects/Settlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Closing_Orign__c</columns>
    <columns>RefInsurancePolicy__c</columns>
    <columns>RefReinsurance__c</columns>
    <columns>RefClaim__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>